# pico-vga

./: CMakeLists.txt  README.md  main.c  makefile  picovga.c  vga.c  vga.h  vga.txt  video.pio
.cache/clangd/index/: main.c.FD33880BB41924A3.idx  vga.c.0DFA730AD660A07F.idx  vga.h.DADCA5B487311169.idx
designs/: Product Logo.psd
designs/picovga/: fp-info-cache  fp-lib-table  picovga  picovga-B_Cu.gbr  picovga-B_Paste.gbr  picovga-F_Cu.gbr  picovga-F_Mask.gbr  picovga-F_Paste.gbr  picovga-F_Silkscreen.gbr  picovga-NPTH-drl_map.gbr  picovga.kicad_prl  picovga.kicad_pro  sym-lib-table
designs/picovga/lib/: pico_rp2040.kicad_prl
designs/picovga/lib/kiwih_kicad.pretty/: name-logo.kicad_mod  osh.kicad_mod  product-logo.kicad_mod  product-version.kicad_mod
kicad/: Product Version.psd
kicad/picovga/: fp-info-cache  picovga-B_Cu.gbr  picovga-B_Mask.gbr  picovga-B_Paste.gbr  picovga-B_Silkscreen.gbr  picovga-Edge_Cuts.gbr  picovga-F_Cu.gbr  picovga-F_Mask.gbr  picovga-F_Paste.gbr  picovga-F_Silkscreen.gbr  picovga-NPTH.drl  picovga-PTH-drl_map.gbr  picovga-PTH.drl  picovga-job.gbrjob  picovga.kicad_pcb  picovga.kicad_prl  picovga.kicad_pro  picovga.kicad_sch  picovga.xml
kicad/picovga/lib/: pico_rp2040.kicad_pro  pico_rp2040.lib
kicad/picovga/lib/kiwih_kicad.pretty/: XM4L1542132.kicad_mod
src/: main.c  vga.c  vga.h  vga.pio
